[package]
name = "redis-derive"
version = "0.2.0"
edition = "2021"
authors = ["Michael van Straten", "kkharji"]
repository = "https://github.com/kkharji/redis-derive"
documentation = "https://docs.rs/redis-derive/"
keywords = ["redis", "serde", "serialization"]
categories = ["encoding"]
readme = "readme.md"
description = "This crate implements the redis::FromRedisValue and redis::ToRedisArgs traits from mitsuhiko / redis-rs for any struct"
license = "MIT OR Apache-2.0"

[dependencies]
redis = "0.31.0"
quote = "1.0.10"
syn = { version = "2.0", features = ["extra-traits", "parsing"] }
heck = "0.5.0"

[lib]
proc-macro = true
path = "src/lib.rs"
